# trinyVLC

./: .gitignore  .gitmodules  AUTHORS  Makefile  Makefile.am  Makefile.in  README  README.md  bootstrap  confdefs.h  config.h  config.h.in  config.status  configure  configure.ac
autom4te.cache/: output.0  output.1  output.3  requests  traces.0  traces.1  traces.3
src/: Makefile  Makefile.am  Makefile.in  main.cpp
